@@ -34,42 +34,43 @@ static void LexerError(const char *pszMsg, yyscan_t scanner);
 
 %%
 
-<INITIAL>"array"	return T_ARRAY;
-<INITIAL>"break"	return T_BREAK;
-<INITIAL>"case"		return T_CASE;
-<INITIAL>"const"  return T_CONST;
-<INITIAL>"continue"	return T_CONTINUE;
-<INITIAL>"default"	return T_DEFAULT;
-<INITIAL>"do"		return T_DO;
-<INITIAL>"else"		return T_ELSE;
-<INITIAL>"exit"		return T_EXIT;
+<INITIAL>"abort"    return T_ABORT;
+<INITIAL>"array"    return T_ARRAY;
+<INITIAL>"break"    return T_BREAK;
+<INITIAL>"case"     return T_CASE;
+<INITIAL>"const"    return T_CONST;
+<INITIAL>"continue" return T_CONTINUE;
+<INITIAL>"default"  return T_DEFAULT;
+<INITIAL>"do"       return T_DO;
+<INITIAL>"else"     return T_ELSE;
+<INITIAL>"exit"     return T_EXIT;
 <INITIAL>"FALSE"    return T_FALSE;
 <INITIAL>"false"    return T_FALSE;
-<INITIAL>"for"		return T_FOR;
-<INITIAL>"foreach"	return T_FOREACH;
-<INITIAL>"global"	return T_GLOBAL;
-<INITIAL>"if"		return T_IF;
-<INITIAL>"ilike"	return T_ILIKE;
-<INITIAL>"imatch"	return T_IMATCH;
-<INITIAL>"int32"	return T_TYPE_INT32;
-<INITIAL>"int64"	return T_TYPE_INT64;
-<INITIAL>"like"		return T_LIKE;
-<INITIAL>"match"	return T_MATCH;
-<INITIAL>"NULL"		return T_NULL;
-<INITIAL>"null"		return T_NULL;
-<INITIAL>"print"	return T_PRINT;
-<INITIAL>"println"	return T_PRINTLN;
-<INITIAL>"real"		return T_TYPE_REAL;
-<INITIAL>"return"	return T_RETURN;
-<INITIAL>"string"	return T_TYPE_STRING;
-<INITIAL>"sub"		return T_SUB;
-<INITIAL>"switch"	return T_SWITCH;
-<INITIAL>"TRUE"		return T_TRUE;
-<INITIAL>"true"		return T_TRUE;
-<INITIAL>"uint32"	return T_TYPE_UINT32;
-<INITIAL>"uint64"	return T_TYPE_UINT64;
-<INITIAL>"use"		return T_USE;
-<INITIAL>"while"	return T_WHILE;
+<INITIAL>"for"      return T_FOR;
+<INITIAL>"foreach"  return T_FOREACH;
+<INITIAL>"global"   return T_GLOBAL;
+<INITIAL>"if"       return T_IF;
+<INITIAL>"ilike"    return T_ILIKE;
+<INITIAL>"imatch"   return T_IMATCH;
+<INITIAL>"int32"    return T_TYPE_INT32;
+<INITIAL>"int64"    return T_TYPE_INT64;
+<INITIAL>"like"     return T_LIKE;
+<INITIAL>"match"    return T_MATCH;
+<INITIAL>"NULL"     return T_NULL;
+<INITIAL>"null"     return T_NULL;
+<INITIAL>"print"    return T_PRINT;
+<INITIAL>"println"  return T_PRINTLN;
+<INITIAL>"real"     return T_TYPE_REAL;
+<INITIAL>"return"   return T_RETURN;
+<INITIAL>"string"   return T_TYPE_STRING;
+<INITIAL>"sub"      return T_SUB;
+<INITIAL>"switch"   return T_SWITCH;
+<INITIAL>"TRUE"     return T_TRUE;
+<INITIAL>"true"     return T_TRUE;
+<INITIAL>"uint32"   return T_TYPE_UINT32;
+<INITIAL>"uint64"   return T_TYPE_UINT64;
+<INITIAL>"use"      return T_USE;
+<INITIAL>"while"    return T_WHILE;
 
 <INITIAL>{identifier}	{ yylval->valStr = strdup(yytext); return T_IDENTIFIER; }
 <INITIAL>{compound_ident} { yylval->valStr = strdup(yytext); return T_COMPOUND_IDENTIFIER; }
